# mini-htop

./: CMakeLists.txt  README.md  StaticBuild_CMakeLists.txt  main.c
lib/: CMakeLists.txt  lib.c  lib.h  memspace.c  procs.c  uptime.c
